src/objects/hed__Attribute__c.object
<CustomObject>
    <description>A characteristic of or a credential held by the associated Contact. For example, an Attribute record with a Credential record type can indicate that a faculty member has a Multiple Subject Teaching Credential.</description>
    <fields>
        <fullName>hed__Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The agency that provided or certified the credential.</description>
        <inlineHelpText>The agency that provided or certified the credential.</inlineHelpText>
        <label>Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Attributes</relationshipLabel>
        <relationshipName>Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Attribute_Type__c</fullName>
        <description>The type of credential or Attribute.</description>
        <inlineHelpText>The type of credential or Attribute.</inlineHelpText>
        <label>Attribute Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Certification</fullName>
                </value>
                <value>
                    <fullName>Endorsement</fullName>
                </value>
                <value>
                    <fullName>Licensure</fullName>
                </value>
                <value>
                    <fullName>Accommodation</fullName>
                </value>
                <value>
                    <fullName>Asylee</fullName>
                </value>
                <value>
                    <fullName>Economically Disadvantaged</fullName>
                </value>
                <value>
                    <fullName>English Learners</fullName>
                </value>
                <value>
                    <fullName>Family Consideration</fullName>
                </value>
                <value>
                    <fullName>Foster Care</fullName>
                </value>
                <value>
                    <fullName>Free Lunch</fullName>
                </value>
                <value>
                    <fullName>Homeless</fullName>
                </value>
                <value>
                    <fullName>Immigrant</fullName>
                </value>
                <value>
                    <fullName>International Student</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Parent in Military</fullName>
                </value>
                <value>
                    <fullName>Pregnant</fullName>
                </value>
                <value>
                    <fullName>Reduced Price Lunch</fullName>
                </value>
                <value>
                    <fullName>Refugee</fullName>
                </value>
                <value>
                    <fullName>Section 504 Handicapped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Contact the Attribute is assigned to.</description>
        <inlineHelpText>The Contact the Attribute is assigned to.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Attributes</relationshipLabel>
        <relationshipName>Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Description__c</fullName>
        <description>A description of the credential or Attribute.</description>
        <inlineHelpText>A description of the credential or Attribute.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>hed__End_Date__c</fullName>
        <description>The date when the credential or Attribute expires or requires renewal.</description>
        <inlineHelpText>The date when the credential or Attribute expires or requires renewal.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Expired__c</fullName>
        <description>Indicates whether the Attribute has expired. Checked automatically when the Attribute end date is before the current date.</description>
        <formula>TODAY() &gt;  hed__End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether the Attribute has expired. Checked automatically when the Attribute end date is before the current date.</inlineHelpText>
        <label>Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Start_Date__c</fullName>
        <description>The issue date for the credential or Attribute.</description>
        <inlineHelpText>The issue date for the credential or Attribute.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Subject_Area__c</fullName>
        <description>The content or subject area that a credential is for.</description>
        <inlineHelpText>The content or subject area that a credential is for.</inlineHelpText>
        <label>Subject Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Career and Technical Education</fullName>
                </value>
                <value>
                    <fullName>Economics</fullName>
                </value>
                <value>
                    <fullName>English Language Arts</fullName>
                </value>
                <value>
                    <fullName>Fine and Performing Arts</fullName>
                </value>
                <value>
                    <fullName>Foreign Language</fullName>
                </value>
                <value>
                    <fullName>History</fullName>
                </value>
                <value>
                    <fullName>Life and Physical Sciences</fullName>
                </value>
                <value>
                    <fullName>Mathematics</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Physical, Health, and Safety Education</fullName>
                </value>
                <value>
                    <fullName>Physics</fullName>
                </value>
                <value>
                    <fullName>Psychology</fullName>
                </value>
                <value>
                    <fullName>Science</fullName>
                </value>
                <value>
                    <fullName>Social Studies</fullName>
                </value>
                <value>
                    <fullName>Sociology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Attribute</label>
    <listViews>
        <fullName>hed__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attributes</pluralLabel>
    <recordTypes>
        <fullName>hed__Credential</fullName>
        <active>true</active>
        <description>Allows educational institutions to track licenses, certifications, or endorsements earned by staff or students.</description>
        <label>Credential</label>
    </recordTypes>
    <recordTypes>
        <fullName>hed__Student_Characteristic</fullName>
        <active>true</active>
        <description>Allows educational institutions to track important student characteristics that might affect students&apos; education.</description>
        <label>Student Characteristic</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>